parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__comment-11.snap
---
source: parser/src/parser/parser.rs
description: "# this is a comment only  program"
---
Module {
    node: Node {
        start: 0,
        end: 33,
    },
    body: [],
}
