parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__comment-12.snap
---
source: parser/src/parser/parser.rs
description: "if a:\n\n\tpass"
---
Module {
    node: Node {
        start: 0,
        end: 12,
    },
    body: [
        Pass(
            Pass {
                node: Node {
                    start: 8,
                    end: 12,
                },
            },
        ),
    ],
}
