parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__comment-2.snap
---
source: parser/src/parser/parser.rs
description: "# a\n"
---
Module {
    node: Node {
        start: 0,
        end: 4,
    },
    body: [],
}
