parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__comment-4.snap
---
source: parser/src/parser/parser.rs
description: "# a\n# b\n"
---
Module {
    node: Node {
        start: 0,
        end: 8,
    },
    body: [],
}
