parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__comment-5.snap
---
source: parser/src/parser/parser.rs
description: "# a\n# b\n# c"
---
Module {
    node: Node {
        start: 0,
        end: 11,
    },
    body: [],
}
