parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__comment-6.snap
---
source: parser/src/parser/parser.rs
description: "# a\n# b\n# c\n"
---
Module {
    node: Node {
        start: 0,
        end: 12,
    },
    body: [],
}
