parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__comment-7.snap
---
source: parser/src/parser/parser.rs
description: "# a\n# b\n# c\n# d"
---
Module {
    node: Node {
        start: 0,
        end: 15,
    },
    body: [],
}
