parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__comment-9.snap
---
source: parser/src/parser/parser.rs
description: "def a(): ... # a\n"
---
Module {
    node: Node {
        start: 0,
        end: 17,
    },
    body: [
        FunctionDef(
            FunctionDef {
                node: Node {
                    start: 0,
                    end: 17,
                },
                name: "a",
                args: Arguments {
                    node: Node {
                        start: 6,
                        end: 6,
                    },
                    posonlyargs: [],
                    args: [],
                    vararg: None,
                    kwonlyargs: [],
                    kw_defaults: [],
                    kwarg: None,
                    defaults: [],
                },
                body: [
                    ExpressionStatement(
                        Constant(
                            Constant {
                                node: Node {
                                    start: 9,
                                    end: 12,
                                },
                                value: Ellipsis,
                            },
                        ),
                    ),
                ],
                decorator_list: [],
                returns: None,
                type_comment: None,
            },
        ),
    ],
}
