parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__comment.snap
---
source: parser/src/parser/parser.rs
expression: program
---
Module {
    node: Node {
        start: 0,
        end: 3,
    },
    body: [],
}
